# translator

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  launcher.json  overlay.json
src-tauri/src/: index.html  launcher.css  launcher.html  launcher.js  lib.rs  main.js  style.css
